Funcionalidad cambiar idioma a ingles

--- a/index-en.html
+++ b/index-en.html
@@ -44,19 +44,19 @@
 
         <ul class="navbar__list flex--container">
           <li class="navbar__item">
-            <a class="navbar__link active" href="#home">Inicio</a>
+            <a class="navbar__link active" href="#home">Home</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="#about">Acerca de Mí</a>
+            <a class="navbar__link" href="#about">About me</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="#skills">Habilidades</a>
+            <a class="navbar__link" href="#skills">Habilities</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="#projects">Portafolio</a>
+            <a class="navbar__link" href="#projects">Projects</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="#contact">Contacto</a>
+            <a class="navbar__link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -70,9 +70,9 @@
           </label>
         </div>
         <div class="navbar__toggle--language flex--container">
-          <input type="checkbox" id="language-toggle" class="navbar__toggle--language-input" />
-          <label for="language-toggle" class="navbar__toggle--language-label"></label>
-        </div>
+            <input type="checkbox" id="language-toggle" class="navbar__toggle--language-input" />
+            <label for="language-toggle" class="navbar__toggle--language-label"></label>
+          </div>
       </div>
       <a href="#nav" ><i class="bx bx-menu btn__open navbar__icon"></i></a>
       <!-- <a href="#" id="btn__open"><i class="bx bx-menu btn__open navbar__icon"></i></a> -->
@@ -103,26 +103,26 @@
         </ul>
 
         <div class="home__info">
-          <h1 class="home__title">¡Hola y bienvenidos!</h1>
+          <h1 class="home__title__eng">Hi and welcome!</h1>
 
           <p class="home__description">
-            Soy Dereck, Ingeniero de Sistemas. La tecnología es mi mundo, y cada línea de código es una oportunidad para innovar.
+            I'm Dereck, System Engineer. Technology is my world, and every line of code it's an oportunity to innove.
           </p>
         </div>
 
         <div class="home__buttons">
           <a class="btn btn--primary" href="#" title="Descargar mi CV" id="download-cv" rel="noreferrer nofollow">
-            Descargar CV
+            Download CV
           </a>                  
         </div>
       </div>
     </section>
     <section id="about" class="about section">
-      <h2 class="section__title">Acerca de Mí</h2>
+      <h2 class="section__title">About me</h2>
 
       <div class="about__container grid--container">
         <p class="about__description">
-          Encuentro un equilibrio importante en mis pasatiempos, especialmente en el contacto con la naturaleza y las artes marciales. La naturaleza me inspira a mantenerme centrado y renovado, buscando paz y claridad mental en sus espacios tranquilos. El deporte, por otro lado, me ha enseñado disciplina, perseverancia y la importancia de trabajar en equipo, valores que aplico tanto en mi vida personal como profesional. 
+            When it comes to my hobbies i find balance, especially when i enjoy nature and  practicemartial arts. Nature inspires me to stay focused and renewed, seeking peace and mental clarity in its quiet spaces. Sport, on the other hand, has taught me discipline, perseverance and the importance of working as a team, values ​​that I apply both in my personal and professional life.        
         </p>
 
         <div class="about__cards flex--container">
@@ -145,12 +145,11 @@
       </div>
     </section>
     <section id="skills" class="skills section">
-      <h2 class="section__title">Habilidades</h2>
+      <h2 class="section__title">Technical skills</h2>
 
       <div class="skills__container grid--container">
         <p class="skills__description flex--container">
-          Soy un profesional con una base sólida en el desarrollo de aplicaciones web y móviles, siempre dispuesto a aprender y adaptarme a nuevas tecnologías. Mis habilidades clave incluyen:        </p>
-
+            I am a professional with a solid foundation in web and mobile application development, always willing to learn and adapt to new technologies. My key skills include:
         <div class="skills__wrapper flex--container">
           <div class="skills__cards flex--container">
             <!--Card 1 -->
@@ -162,8 +161,7 @@
                 <h3 class="skills__card-title">HTML</h3>
 
                 <p class="skills__card-description">
-                  Sólidos conocimientos en la creación de estructuras web utilizando HTML5, asegurando una semántica correcta y accesibilidad en el desarrollo de interfaces. Habilidad para crear páginas web bien organizadas, utilizando etiquetas estándar y optimizando el contenido para un mejor rendimiento.
-                </p>
+                    Strong knowledge in creating web structures using HTML5, ensuring correct semantics and accessibility in interface development. Ability to create well-organized web pages, using standard tags and optimizing content for better performance.                </p>
               </div>
             </details>
             <!--Card 2 -->
@@ -175,8 +173,7 @@
                 <h3 class="skills__card-title">CSS3</h3>
 
                 <p class="skills__card-description">
-                  Experiencia en CSS3 para diseñar interfaces visuales atractivas y responsivas. Manejo de Flexbox y Grid para crear diseños fluidos y adaptativos, garantizando que las páginas web se vean bien en diferentes dispositivos.
-                </p>
+                    Experience in CSS3 to design attractive and responsive visual interfaces. Knowledge of Flexbox and Grid to create fluid and adaptive layouts, ensuring that web pages look good on different devices.                </p>
               </div>
             </details>
             <!--Card 3 -->
@@ -188,8 +185,7 @@
                 <h3 class="skills__card-title">Javascript</h3>
 
                 <p class="skills__card-description">
-                  Habilidad en JavaScript para desarrollar interactividad en aplicaciones web. Experiencia en la manipulación del DOM, manejo de eventos y trabajo con JSON para interactuar con APIs. Además, he trabajado con Node.js para desarrollo de back-end y APIs.
-                </p>
+                    JavaScript skills to develop interactivity in web applications. Experience in DOM manipulation, event handling, and working with JSON to interact with APIs. Additionally, I have worked with Node.js for back-end and API development.                </p>
               </div>
             </details>
             <!--Card 4 -->
@@ -201,27 +197,26 @@
                 <h3 class="skills__card-title">Github</h3>
 
                 <p class="skills__card-description">
-                  Uso experto de Git y GitHub para el control de versiones y la colaboración en proyectos de desarrollo. Familiaridad con ramas, merges, pull requests y resolución de conflictos. Este flujo de trabajo me permite colaborar eficazmente en equipos.
-                </p>
+                    Expert use of Git and GitHub for version control and collaboration on development projects. Familiarity with branches, merges, pull requests, and conflict resolution. This workflow allows me to collaborate effectively in teams.                </p>
               </div>
             </details>
           </div>
         </div>
         <div class="skills__tags flex--container">
-          <h3 class="skills__tags-title">Habilidades Blandas</h3>
+          <h3 class="skills__tags-title">Soft Skills</h3>
           <div class="skills__tags-container flex--container">
-            <span class="skills__tag">Comunicación Efectiva</span>
-            <span class="skills__tag">Trabajo en equipo</span>
-            <span class="skills__tag">Adaptabilidad</span>
-            <span class="skills__tag">Resolución de Problemas</span>
-            <span class="skills__tag">Proactivo</span>
-            <span class="skills__tag">Pensamiento Crítico</span>
+            <span class="skills__tag">Effective Communication</span>
+            <span class="skills__tag">Teamwork</span>
+            <span class="skills__tag">Adaptability</span>
+            <span class="skills__tag">Problem Solving</span>
+            <span class="skills__tag">Proactive</span>
+            <span class="skills__tag">Critical Thinking</span>
           </div>
         </div>
       </div>
     </section>
     <section id="projects" class="projects section">
-      <h2 class="section__title">Proyectos</h2>
+      <h2 class="section__title">Projects</h2>
 
       <div class="projects__container grid--container">
         <div class="projects__project">
@@ -231,17 +226,17 @@
             </div>
 
             <div class="projects__info">
-              <h3 class="projects__name">Proyecto 1</h3>
+              <h3 class="projects__name">Project 1</h3>
               <p class="projects__description">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               </p>
 
               <div class="projects__buttons">
                 <button class="btn projects__button" type="button">
-                  VER DEMO
+                  WATCH DEMO
                 </button>
                 <button class="btn projects__button" type="button">
-                  VER CÓDIGO
+                  WATCH CODE
                 </button>
               </div>
             </div>
@@ -255,17 +250,17 @@
             </div>
 
             <div class="projects__info">
-              <h3 class="projects__name">Proyecto 2</h3>
+              <h3 class="projects__name">Project 2</h3>
               <p class="projects__description">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               </p>
 
               <div class="projects__buttons">
                 <button class="btn projects__button" type="button">
-                  VER DEMO
+                  WATCH DEMO
                 </button>
                 <button class="btn projects__button" type="button">
-                  VER CÓDIGO
+                  WATCH CODE
                 </button>
               </div>
             </div>
@@ -279,17 +274,17 @@
             </div>
 
             <div class="projects__info">
-              <h3 class="projects__name">Proyecto 3</h3>
+              <h3 class="projects__name">Project 3</h3>
               <p class="projects__description">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               </p>
 
               <div class="projects__buttons">
                 <button class="btn projects__button" type="button">
-                  VER DEMO
+                  WATCH DEMO
                 </button>
                 <button class="btn projects__button" type="button">
-                  VER CÓDIGO
+                  WATCH CODE
                 </button>
               </div>
             </div>
@@ -303,17 +298,17 @@
             </div>
 
             <div class="projects__info">
-              <h3 class="projects__name">Proyecto 4</h3>
+              <h3 class="projects__name">Project 4</h3>
               <p class="projects__description">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               </p>
 
               <div class="projects__buttons">
                 <button class="btn projects__button" type="button">
-                  VER DEMO
+                  WATCH DEMO
                 </button>
                 <button class="btn projects__button" type="button">
-                  VER CÓDIGO
+                  WATCH CODE
                 </button>
               </div>
             </div>
@@ -322,13 +317,13 @@
       </div>
     </section>
     <section id="contact" class="contact section">
-      <h2 class="section__title">Contacto</h2>
+      <h2 class="section__title">Contact</h2>
 
       <div class="contact__container grid--container">
         <div class="contact__info">
-          <h3 class="contact__info-title">Información de contacto</h3>
+          <h3 class="contact__info-title">Contact information</h3>
           <p class="contact__info-description">
-            Hagamos proyectos innovadores juntos, no dudes en contactarme.
+            Let's do innovative projects together, don't hesitate to contact me.
           </p>
 
           <address class="contact__info-data">
@@ -337,7 +332,7 @@
 
               <span class="contact__info-number">
                 <a href="https://wa.me/573233094729?text=Hola,%20quisiera%20contratarte." target="_blank"
-                  rel="noreferrer nofollow">Enviar mensaje a WhatsApp</a>
+                  rel="noreferrer nofollow">Send message to WhatsApp</a>
               </span>
             </div>
 
@@ -369,34 +364,34 @@
           </address>
         </div>
         <div class="contact__form">
-          <h3 class="contact__form-title">Enviar mensaje</h3>
+          <h3 class="contact__form-title">Send message</h3>
           <form id="form" class="contact__form-container">
             <div class="contact__form-group">
-              <label for="name" class="contact__form-label">Nombre</label>
+              <label for="name" class="contact__form-label">Name</label>
               <input type="text" id="name" name="name" class="contact__form-input" />
             </div>
 
             <div class="contact__form-group">
-              <label for="email" class="contact__form-label">Correo</label>
+              <label for="email" class="contact__form-label">Mail</label>
               <input type="email" id="email" name="email" class="contact__form-input" />
             </div>
 
             <div class="contact__form-group">
-              <label for="subject" class="contact__form-label">Asunto</label>
+              <label for="subject" class="contact__form-label">Affair</label>
               <input type="text" id="subject" name="subject" class="contact__form-input" />
             </div>
 
             <div class="contact__form-group">
-              <label for="message" class="contact__form-label">Mensaje</label>
+              <label for="message" class="contact__form-label">Message</label>
               <textarea id="message" name="message" cols="30" rows="10" class="contact__form-input"></textarea>
             </div>
             <dialog class="contact__form-modal" id="modal">
-              Formulario enviado con éxito!
-              <button type="reset" id="btn_close-modal">Cerrar</button>
+                Form sent successfully!
+              <button type="reset" id="btn_close-modal">Close</button>
             </dialog>
 
             <button type="submit" class="btn contact__form-button">
-              Enviar
+                Send
             </button>
           </form>
         </div>
@@ -408,12 +403,12 @@
       <div class="footer__info">
         <h3 class="footer__title">Dereck's Portafolio</h3>
         <p class="footer__description">
-          La tecnología es mi mundo, y cada línea de código es una oportunidad para innovar.
+            Technology is my world, and every line of code is an opportunity to innovate.
         </p>
       </div>
 
       <div class="footer__social">
-        <h3 class="footer__title">Redes Sociales</h3>
+        <h3 class="footer__title">Social networks</h3>
 
         <ul class="footer__social-list">
           <li class="footer__social-item">
@@ -438,7 +433,7 @@
       </div>
     </div>
 
-    <p class="footer__copy"><span id="currentyear"></span> Todos los derechos reservados.</p>
+    <p class="footer__copy"><span id="currentyear"></span> All rights reserved.</p>
   </footer>
 </body>
 
