--- a/index-en.html
+++ b/index-en.html
@@ -2,27 +2,27 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="Alejandra Olazagasti" />
-  <meta name="description" content="No más de 165 caracteres" />
-  <meta name="keywords" content="palabra clave 1, palabra clave 2, palabra clave 3" />
-  <meta name="theme-color" content="#09f" />
-  <meta name="view-transition" content="same-origin" />
-  <!-- Iconos  -->
-  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-  <!-- Fuente  -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
-  <title>Portafolio</title>
-  <link rel="icon" href="assets/img/logo.png" type="image/png" />
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <script type="module" src="assets/js/main.js"></script>
-</head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Dereck Montes" />
+    <meta name="description" content="Portafolio profesional" />
+    <meta name="keywords" content="portafolio, cv, desarrollo" />
+    <meta name="theme-color" content="#09f" />
+    <meta name="view-transition" content="same-origin" />
+    <!-- Iconos  -->
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <!-- Fuente  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet">
+    <title>Dereck's Portafolio</title>
+    <link rel="icon" href="assets/img/ilustracion-logo.png" type="image/png" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <script type="module" src="assets/js/main.js"></script>
+  </head>
 
 <body>
   <!-- Loader -->
@@ -50,7 +50,7 @@
             <a class="navbar__link" href="#about">About me</a>
           </li>
           <li class="navbar__item">
-            <a class="navbar__link" href="#skills">Habilities</a>
+            <a class="navbar__link" href="#skills">Skills</a>
           </li>
           <li class="navbar__item">
             <a class="navbar__link" href="#projects">Projects</a>
