Cambios a documentos e imagenes

--- a/index-en.html
+++ b/index-en.html
@@ -83,8 +83,8 @@
     <section id="home" class="home">
       <div class="home__container grid--container">
         <div class="home__image">
-          <img class="body" src="assets/img/ilustracion-cuerpo.png" alt="profile photo"  />
-          <img class="arm" src="assets/img/ilustracion-brazo.png" alt="profile photo"  />
+          <img class="body" src="assets/img/Illustration_manversion.png" alt="profile photo"  />
+          <img class="arm" src="assets/img/Illustration_armversion.png" alt="profile photo"  />
         </div>
 
         <ul class="home__social flex--container">
@@ -222,7 +222,7 @@
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
-              <img src="assets/img/project1.jpg" alt="project 1" title="Ecommerce Vanilla" />
+              <img src="assets/img/sgpa_proyecto.png" alt="project 1" title="Ecommerce Vanilla" />
             </div>
 
             <div class="projects__info">
@@ -246,7 +246,7 @@
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
-              <img src="assets/img/project2.png" alt="project 1" title="Consumiendo API Pokemon con React" />
+              <img src="assets/img/autosoft_proyecto.png"" alt="project 1" title="Consumiendo API Pokemon con React" />
             </div>
 
             <div class="projects__info">
@@ -270,7 +270,7 @@
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
-              <img src="assets/img/project3.jpg" alt="project 1" title="CRUD con React" />
+              <img src="assets/img/TouriC_proyecto.png" alt="project 1" title="CRUD con React" />
             </div>
 
             <div class="projects__info">
@@ -294,7 +294,7 @@
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
-              <img src="assets/img/project4.png" alt="project 1" title="Aplicación del tiempo con React" />
+              <img src="assets/img/camerata_proyecto.png" alt="project 1" title="Aplicación del tiempo con React" />
             </div>
 
             <div class="projects__info">
