--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     <section id="home" class="home">
       <div class="home__container grid--container">
         <div class="home__image">
-          <img class="body" src="assets/img/ilustracion-cuerpo.png" alt="profile photo"  />
-          <img class="arm" src="assets/img/ilustracion-brazo.png" alt="profile photo"  />
+          <img class="body" src="assets/img/Illustration_manversion.png" alt="profile photo"  />
+          <img class="arm" src="assets/img/Illustration_armversion.png" alt="profile photo"  />
         </div>
 
         <ul class="home__social flex--container">
@@ -227,20 +227,17 @@
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
-              <img src="assets/img/project1.jpg" alt="project 1" title="Ecommerce Vanilla" />
+              <img src="assets/img/sgpa_proyecto.png" alt="project 1" title="Ecommerce Vanilla" />
             </div>
 
             <div class="projects__info">
-              <h3 class="projects__name">Proyecto 1</h3>
+              <h3 class="projects__name">SGPA</h3>
               <p class="projects__description">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                plataforma web diseñada para facilitar la gestión de proyectos académicos dentro de la universidad, utilizando Java, PrimeFaces y XHTML para el desarrollo de interfaces y funcionalidades.
               </p>
 
               <div class="projects__buttons">
-                <button class="btn projects__button" type="button">
-                  VER DEMO
-                </button>
-                <button class="btn projects__button" type="button">
+                <button class="btn projects__button" data-repo="https://github.com/dereckmg2803/SGPA" type="button">
                   VER CÓDIGO
                 </button>
               </div>
@@ -251,20 +248,17 @@
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
-              <img src="assets/img/project2.png" alt="project 1" title="Consumiendo API Pokemon con React" />
+              <img src="assets/img/autosoft_proyecto.png" alt="project 1" title="Consumiendo API Pokemon con React" />
             </div>
 
             <div class="projects__info">
-              <h3 class="projects__name">Proyecto 2</h3>
+              <h3 class="projects__name">Autosoft</h3>
               <p class="projects__description">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Aplicativo web para optimizar las operaciones internas de talleres automotrices, utilizando PHP y MySQL para la lógica de negocio y base de datos.
               </p>
 
               <div class="projects__buttons">
-                <button class="btn projects__button" type="button">
-                  VER DEMO
-                </button>
-                <button class="btn projects__button" type="button">
+                <button class="btn projects__button" data-repo="https://github.com/dereckmg2803/Autosoft" type="button">
                   VER CÓDIGO
                 </button>
               </div>
@@ -275,20 +269,17 @@
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
-              <img src="assets/img/project3.jpg" alt="project 1" title="CRUD con React" />
+              <img src="assets/img/TouriC_proyecto.png" alt="project 1" title="CRUD con React" />
             </div>
 
             <div class="projects__info">
-              <h3 class="projects__name">Proyecto 3</h3>
+              <h3 class="projects__name">TouriC</h3>
               <p class="projects__description">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Chatbot interactivo para proporcionar información turística en Cartagena, desarrollado con Flutter (Dart) y la API de Gemini.
               </p>
 
               <div class="projects__buttons">
-                <button class="btn projects__button" type="button">
-                  VER DEMO
-                </button>
-                <button class="btn projects__button" type="button">
+                <button class="btn projects__button" data-repo="https://github.com/dereckmg2803/chatbot" type="button">
                   VER CÓDIGO
                 </button>
               </div>
@@ -299,20 +290,17 @@
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
-              <img src="assets/img/project4.png" alt="project 1" title="Aplicación del tiempo con React" />
+              <img src="assets/img/tenisco_project.png" alt="project 1" title="Aplicación del tiempo con React" />
             </div>
 
             <div class="projects__info">
-              <h3 class="projects__name">Proyecto 4</h3>
+              <h3 class="projects__name">Tenisco</h3>
               <p class="projects__description">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Plataforma de comercio electrónico desarrollada con React, Redux y Tailwind CSS para la venta de tenis en Colombia.
               </p>
 
               <div class="projects__buttons">
-                <button class="btn projects__button" type="button">
-                  VER DEMO
-                </button>
-                <button class="btn projects__button" type="button">
+                <button class="btn projects__button" data-repo="https://github.com/dereckmg2803/eshoes" type="button">
                   VER CÓDIGO
                 </button>
               </div>
