Cambios a proyectos y html en ingles

--- a/index-en.html
+++ b/index-en.html
@@ -95,7 +95,7 @@
             <a class="home__social-link" href="https://wa.me/573233094729?text=Hola,%20quisiera%20contratarte." target="_blank"><i class="bx bxl-whatsapp"></i></a>
           </li>
           <li class="home__social-item">
-            <a class="home__social-link" href="https://github.com/dereckemgm" target="_blank"><i class="bx bxl-github"></i></a>
+            <a class="home__social-link" href="https://github.com/dereckmg2803" target="_blank"><i class="bx bxl-github"></i></a>
           </li>
           <li class="home__social-item">
             <a class="home__social-link" href="mailto:dereck.mg2803@gmail.com?subject=Asunto%20del%20mensaje&body=Cuerpo%20del%20mensaje" target="_blank"><i class="bx bx-envelope"></i></a>
@@ -222,19 +222,15 @@
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
-              <img src="assets/img/sgpa_proyecto.png" alt="project 1" title="Ecommerce Vanilla" />
+              <img src="assets/img/sgpa_proyecto.png" alt="project 1" title="SGPA Project" />
             </div>
 
             <div class="projects__info">
-              <h3 class="projects__name">Project 1</h3>
+              <h3 class="projects__name">SGPA</h3>
               <p class="projects__description">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                web platform designed to facilitate the management of academic projects within the university, using Java, PrimeFaces and XHTML.
               </p>
-
               <div class="projects__buttons">
-                <button class="btn projects__button" type="button">
-                  WATCH DEMO
-                </button>
                 <button class="btn projects__button" type="button">
                   WATCH CODE
                 </button>
@@ -246,19 +242,16 @@
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
-              <img src="assets/img/autosoft_proyecto.png"" alt="project 1" title="Consumiendo API Pokemon con React" />
+              <img src="assets/img/autosoft_proyecto.png"" alt="project 1" title="Autosoft Project" />
             </div>
 
             <div class="projects__info">
-              <h3 class="projects__name">Project 2</h3>
+              <h3 class="projects__name">Autosoft</h3>
               <p class="projects__description">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Web application to optimize internal operations of automotive workshops, using PHP and MySQL for business logic and database.
               </p>
 
               <div class="projects__buttons">
-                <button class="btn projects__button" type="button">
-                  WATCH DEMO
-                </button>
                 <button class="btn projects__button" type="button">
                   WATCH CODE
                 </button>
@@ -270,19 +263,16 @@
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
-              <img src="assets/img/TouriC_proyecto.png" alt="project 1" title="CRUD con React" />
+              <img src="assets/img/TouriC_proyecto.png" alt="project 1" title="TouriC Project" />
             </div>
 
             <div class="projects__info">
-              <h3 class="projects__name">Project 3</h3>
+              <h3 class="projects__name">TouriC</h3>
               <p class="projects__description">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Interactive chatbot to provide tourist information in Cartagena, developed with Flutter (Dart) and the Gemini API.
               </p>
 
               <div class="projects__buttons">
-                <button class="btn projects__button" type="button">
-                  WATCH DEMO
-                </button>
                 <button class="btn projects__button" type="button">
                   WATCH CODE
                 </button>
@@ -294,19 +284,16 @@
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
-              <img src="assets/img/camerata_proyecto.png" alt="project 1" title="Aplicación del tiempo con React" />
+              <img src="assets/img/tenisco_project.png" alt="project 1" title="Tenisco Project" />
             </div>
 
             <div class="projects__info">
-              <h3 class="projects__name">Project 4</h3>
+              <h3 class="projects__name">Tenisco</h3>
               <p class="projects__description">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                E-commerce platform developed with React, Redux and Tailwind CSS for the sale of tennis shoes in Colombia.
               </p>
 
               <div class="projects__buttons">
-                <button class="btn projects__button" type="button">
-                  WATCH DEMO
-                </button>
                 <button class="btn projects__button" type="button">
                   WATCH CODE
                 </button>
@@ -422,7 +409,7 @@
           </li>
 
           <li class="footer__social-item">
-            <a class="footer__social-link" href="https://github.com/dereckemgm" target="_blank" rel="noreferrer nofollow"><i
+            <a class="footer__social-link" href="https://github.com/dereckmg2803" target="_blank" rel="noreferrer nofollow"><i
                 class="bx bxl-github"></i></a>
           </li>
 
