--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <a class="home__social-link" href="https://wa.me/573233094729?text=Hola,%20quisiera%20contratarte." target="_blank"><i class="bx bxl-whatsapp"></i></a>
           </li>
           <li class="home__social-item">
-            <a class="home__social-link" href="https://github.com/dereckemgm" target="_blank"><i class="bx bxl-github"></i></a>
+            <a class="home__social-link" href="https://github.com/dereckmg2803" target="_blank"><i class="bx bxl-github"></i></a>
           </li>
           <li class="home__social-item">
             <a class="home__social-link" href="mailto:dereck.mg2803@gmail.com?subject=Asunto%20del%20mensaje&body=Cuerpo%20del%20mensaje" target="_blank"><i class="bx bx-envelope"></i></a>
@@ -227,13 +227,13 @@
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
-              <img src="assets/img/sgpa_proyecto.png" alt="project 1" title="Ecommerce Vanilla" />
+              <img src="assets/img/sgpa_proyecto.png" alt="project 1" title="Proyecto SGPA" />
             </div>
 
             <div class="projects__info">
               <h3 class="projects__name">SGPA</h3>
               <p class="projects__description">
-                plataforma web diseñada para facilitar la gestión de proyectos académicos dentro de la universidad, utilizando Java, PrimeFaces y XHTML para el desarrollo de interfaces y funcionalidades.
+                Plataforma web diseñada para facilitar la gestión de proyectos académicos, utilizando Java, PrimeFaces y XHTML.
               </p>
 
               <div class="projects__buttons">
@@ -248,7 +248,7 @@
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
-              <img src="assets/img/autosoft_proyecto.png" alt="project 1" title="Consumiendo API Pokemon con React" />
+              <img src="assets/img/autosoft_proyecto.png" alt="project 1" title="Proyecto Autosoft" />
             </div>
 
             <div class="projects__info">
@@ -269,7 +269,7 @@
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
-              <img src="assets/img/TouriC_proyecto.png" alt="project 1" title="CRUD con React" />
+              <img src="assets/img/TouriC_proyecto.png" alt="project 1" title="Proyecto TouriC" />
             </div>
 
             <div class="projects__info">
@@ -290,7 +290,7 @@
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
-              <img src="assets/img/tenisco_project.png" alt="project 1" title="Aplicación del tiempo con React" />
+              <img src="assets/img/tenisco_project.png" alt="project 1" title="Proyecto Tenisco" />
             </div>
 
             <div class="projects__info">
@@ -415,7 +415,7 @@
           </li>
 
           <li class="footer__social-item">
-            <a class="footer__social-link" href="https://github.com/dereckemgm" target="_blank" rel="noreferrer nofollow"><i
+            <a class="footer__social-link" href="https://github.com/dereckmg2803" target="_blank" rel="noreferrer nofollow"><i
                 class="bx bxl-github"></i></a>
           </li>
 
