cambio en las imagenes

--- a/index.html
+++ b/index.html
@@ -128,17 +128,17 @@
         <div class="about__cards flex--container">
           <!--Card 1 -->
           <div class="about__card">
-            <img class="about__card--img" src="assets/img/yo.jpg" alt="Laborando como ingeniero"
+            <img class="about__card--img" src="assets/img/yo.jpg" alt="Sentado en el parque"
               title="Laborando como ingeniero" />
           </div>
           <!--Card 2 -->
           <div class="about__card">
-            <img class="about__card--img" src="assets/img/popa.jpg" alt="Laborando como diseñador"
+            <img class="about__card--img" src="assets/img/popa.jpg" alt="Lugar emblematico de cartagena"
               title="Laborando como diseñador" />
           </div>
           <!--Card 3 -->
           <div class="about__card">
-            <img class="about__card--img" src="assets/img/tatami.jpg" alt="Trabajando en equipo"
+            <img class="about__card--img" src="assets/img/tatami.jpg" alt="Dojo de artes marciales"
               title="rabajando en equipo" />
           </div>
         </div>
